examples/test/testpolicy1811.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1811
  namespace: namespace407
spec:
  podSelector:
    matchLabels:
      key0: value49
      key23: value40
      key47: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value9
          key40: value16
      podSelector:
        matchLabels:
          key5: value8
